# basic_json

./: CMakeLists.txt  README.md
include/: basic_json.hpp
tests/: Tests.cpp
